Fix layout issue with right side of top bar when user is logged in

--- a/src/client/top-bar.scss
+++ b/src/client/top-bar.scss
@@ -54,6 +54,9 @@
   }
 
   #current-user {
+    display: flex;
+    flex-direction: row;
+
     a {
       @extend button;
       text-decoration: inherit;
